manifests/base/resources/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hpe-prometheus-exporter
  namespace: hpe-storage
  labels:
    app: hpe-prometheus-exporter
spec:
  type: ClusterIP
  ports:
    - name: http-metrics
      port: 9090
      protocol: TCP
      targetPort: 8080
  selector:
    app: hpe-prometheus-exporter
