manifests/base/resources/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hpe-prometheus-exporter
spec:
  podSelector:
    matchLabels:
      app: hpe-prometheus-exporter
  ingress:
  - {}
  egress:
  - {} 
  policyTypes:
  - Ingress
  - Egress
